@@ -10,7 +10,7 @@
 [ ] Global
 	[X] send_global sub (Use a foreach statement for %uid's to send a NOTICE to each user? --Matthew)
 [ ] NickServ
-	[ ] Make the nickserv core a module.
+	[X] Make the nickserv core a module.
 	[!] Register
 		[X] Check for valid a valid email address
 		[X] Set default nickserv flags
