@@ -117,3 +117,5 @@ Current
 	- API: added account_name to get an account name via a grouped nick
 	- Modules: Added to chanserv/set: set noexpire
 	- Protocols: when we track topics, if the channel is registered, set metadata to track the topic
+	- Modules: Added to chanserv/main: TOPICLOCK enforcement
+	- Modules: Added nickserv/main
